[gd_scene load_steps=12 format=3 uid="uid://cpf22cfrvi7wl"]

[ext_resource type="Script" path="res://UI.gd" id="1_rlmj4"]
[ext_resource type="Texture2D" uid="uid://3f40brevbdte" path="res://Effects/itens.png" id="2_6qtxx"]

[sub_resource type="Gradient" id="Gradient_jnouk"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_wh6qj"]
gradient = SubResource("Gradient_jnouk")
width = 1
height = 1

[sub_resource type="Animation" id="Animation_gned0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("whiteTex:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("gameOver:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("info:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("info:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(698, 457)]
}

[sub_resource type="Animation" id="Animation_tiaoa"]
resource_name = "flash"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("whiteTex:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_12vxc"]
resource_name = "gameover"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("whiteTex:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("gameOver:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.6, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"gameReset"
}]
}

[sub_resource type="Animation" id="Animation_cismx"]
resource_name = "info"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("info:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 2.2, 2.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("info:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6, 2.2, 2.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1150, 457), Vector2(697.765, 457), Vector2(697.765, 457), Vector2(1150, 457)]
}

[sub_resource type="Animation" id="Animation_u2o5g"]
resource_name = "normal"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("whiteTex:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("gameOver:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("info:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nn23t"]
_data = {
"RESET": SubResource("Animation_gned0"),
"flash": SubResource("Animation_tiaoa"),
"gameover": SubResource("Animation_12vxc"),
"info": SubResource("Animation_cismx"),
"normal": SubResource("Animation_u2o5g")
}

[sub_resource type="Theme" id="Theme_revt0"]
default_font_size = 40

[node name="UI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_rlmj4")

[node name="life1" type="Sprite2D" parent="."]
position = Vector2(1, 1)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_6qtxx")
centered = false
hframes = 2
vframes = 3

[node name="life2" type="Sprite2D" parent="."]
position = Vector2(51, 1)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_6qtxx")
centered = false
hframes = 2
vframes = 3

[node name="life3" type="Sprite2D" parent="."]
position = Vector2(101, 1)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_6qtxx")
centered = false
hframes = 2
vframes = 3

[node name="power1" type="Sprite2D" parent="."]
position = Vector2(1, 593)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_6qtxx")
centered = false
hframes = 2
vframes = 3
frame = 1

[node name="power2" type="Sprite2D" parent="."]
position = Vector2(51, 593)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_6qtxx")
centered = false
hframes = 2
vframes = 3
frame = 1

[node name="power3" type="Sprite2D" parent="."]
position = Vector2(101, 593)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_6qtxx")
centered = false
hframes = 2
vframes = 3
frame = 1

[node name="whiteTex" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
scale = Vector2(1532, 808)
texture = SubResource("GradientTexture2D_wh6qj")
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nn23t")
}
autoplay = "normal"

[node name="gameOver" type="Label" parent="."]
modulate = Color(0, 0, 0, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -564.0
offset_top = -309.0
offset_right = 564.0
offset_bottom = 310.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_revt0")
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="info" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 698.0
offset_top = 457.0
offset_right = 1198.0
offset_bottom = 666.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.9, 0.9)
theme = SubResource("Theme_revt0")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Welcome to level 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="archonScore" type="Node2D" parent="."]

[node name="score" type="Label" parent="archonScore"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 591.0
offset_top = 3.0
offset_right = 1212.0
offset_bottom = 80.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.9, 0.9)
theme = SubResource("Theme_revt0")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Level: 0             Score: 0"
vertical_alignment = 1
